--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -16,6 +16,10 @@ rust-version = "1.73"
 crate-type = ["rlib"]
 name = "ctru"
 
+[patch.'https://github.com/rust3ds/ctru-rs']
+# This is a temporary patch to use the forked version of ctru-sys
+ctru-sys = { path = "https://github.com/Tom60chat/ctru-rs" }
+
 [dependencies]
 cfg-if = "1.0"
 ctru-sys = { path = "../ctru-sys", version = "0.5.0" }
