--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -20,6 +20,11 @@ name = "ctru"
 # This is a temporary patch to use the forked version of ctru-sys
 ctru-sys = { git = "https://github.com/Tom60chat/ctru-rs" }
 
+
+[patch.'https://github.com/Tom60chat/ctru-rs']
+# This is a temporary patch to use the forked version of ctru-sys
+ctru-sys = { git = "https://github.com/Tom60chat/ctru-rs" }
+
 [dependencies]
 cfg-if = "1.0"
 ctru-sys = { path = "../ctru-sys", version = "0.5.0" }
