--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -16,7 +16,7 @@ rust-version = "1.73"
 crate-type = ["rlib"]
 name = "ctru"
 
-[patch.'https://github.com/rust3ds/ctru-rs.git']
+[patch.'https://github.com/rust3ds/ctru-rs']
 # Make sure all dependencies use the local packages. This is needed for things
 # like pthread-3ds that rely on ctru-sys, and test-runner which relies on ctru-rs
 ctru-rs = { git = "https://github.com/Tom60chat/ctru-rs" }
