--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -16,12 +16,6 @@ rust-version = "1.73"
 crate-type = ["rlib"]
 name = "ctru"
 
-[patch.'https://github.com/rust3ds/ctru-rs']
-# Make sure all dependencies use the local packages. This is needed for things
-# like pthread-3ds that rely on ctru-sys, and test-runner which relies on ctru-rs
-ctru-rs = { git = "https://github.com/Tom60chat/ctru-rs" }
-ctru-sys = { git = "https://github.com/Tom60chat/ctru-rs" }
-
 [dependencies]
 cfg-if = "1.0"
 ctru-sys = { path = "../ctru-sys", version = "0.5.0" }
@@ -31,6 +25,12 @@ pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds.git" }
 libc = "0.2.121"
 bitflags = "2.3.3"
 widestring = "1.0.2"
+
+[patch.'https://github.com/rust3ds/ctru-rs.git']
+# Make sure all dependencies use the local packages. This is needed for things
+# like pthread-3ds that rely on ctru-sys, and test-runner which relies on ctru-rs
+ctru-rs = { git = "https://github.com/Tom60chat/ctru-rs" }
+ctru-sys = { git = "https://github.com/Tom60chat/ctru-rs" }
 
 [build-dependencies]
 toml = "0.5"
