--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ resolver = "2"
 [patch.'https://github.com/rust3ds/ctru-rs']
 # Make sure all dependencies use the local packages. This is needed for things
 # like pthread-3ds that rely on ctru-sys, and test-runner which relies on ctru-rs
-ctru-rs = { path = "ctru-rs" }
-ctru-sys = { path = "ctru-sys" }
+ctru-rs = { git = "https://github.com/Tom60chat/ctru-rs" }
+ctru-sys = { git = "https://github.com/Tom60chat/ctru-rs" }
 
 [patch.'https://github.com/Tom60chat/ctru-rs']
 # Make sure all dependencies use the local packages. This is needed for things
 # like pthread-3ds that rely on ctru-sys, and test-runner which relies on ctru-rs
 ctru-rs = { path = "ctru-rs" }
 ctru-sys = { path = "ctru-sys" }
-
