--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -26,10 +26,9 @@ libc = "0.2.121"
 bitflags = "2.3.3"
 widestring = "1.0.2"
 
-[patch.'https://github.com/rust3ds/ctru-rs.git']
-# Make sure all dependencies use the local packages. This is needed for things
-# like pthread-3ds that rely on ctru-sys, and test-runner which relies on ctru-rs
-ctru-rs = { git = "https://github.com/Tom60chat/ctru-rs" }
+[patch.'https://github.com/rust3ds/ctru-rs']
+ctru-rs = { path = "ctru-rs" }
+ctru-sys = { path = "ctru-sys" }
 
 [build-dependencies]
 toml = "0.5"
