--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -21,14 +21,10 @@ cfg-if = "1.0"
 ctru-sys = { path = "../ctru-sys", version = "0.5.0" }
 const-zero = "0.1.0"
 shim-3ds = { git = "https://github.com/rust3ds/shim-3ds.git" }
-pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds.git" }
+pthread-3ds = { git = "https://github.com/Tom60chat/pthread-3ds" }
 libc = "0.2.121"
 bitflags = "2.3.3"
 widestring = "1.0.2"
-
-[patch.'https://github.com/rust3ds/ctru-rs']
-ctru-rs = { path = "ctru-rs" }
-ctru-sys = { path = "ctru-sys" }
 
 [build-dependencies]
 toml = "0.5"
