--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -20,7 +20,7 @@ name = "ctru"
 cfg-if = "1.0"
 ctru-sys = { path = "../ctru-sys", version = "0.5.0" }
 const-zero = "0.1.0"
-shim-3ds = { git = "https://github.com/rust3ds/shim-3ds.git" }
+shim-3ds = { git = "https://github.com/Tom60chat/shim-3ds" }
 pthread-3ds = { git = "https://github.com/Tom60chat/pthread-3ds" }
 libc = "0.2.121"
 bitflags = "2.3.3"
@@ -35,7 +35,7 @@ cfg-if = "1.0.0"
 ferris-says = "0.2.1"
 futures = "0.3"
 lewton = "0.10.2"
-test-runner = { git = "https://github.com/rust3ds/test-runner.git" }
+#test-runner = { git = "https://github.com/rust3ds/test-runner.git" }
 time = "0.3.7"
 tokio = { version = "1.16", features = ["rt", "time", "sync", "macros"] }
 
