--- a/ctru-rs/Cargo.toml
+++ b/ctru-rs/Cargo.toml
@@ -20,8 +20,8 @@ name = "ctru"
 cfg-if = "1.0"
 ctru-sys = { path = "../ctru-sys", version = "0.5.0" }
 const-zero = "0.1.0"
-shim-3ds = { git = "https://github.com/Tom60chat/shim-3ds" }
-pthread-3ds = { git = "https://github.com/Tom60chat/pthread-3ds" }
+shim-3ds = { git = "https://github.com/Tom60-rust3ds/shim-3ds" }
+pthread-3ds = { git = "https://github.com/Tom60-rust3ds/pthread-3ds" }
 libc = "0.2.121"
 bitflags = "2.3.3"
 widestring = "1.0.2"
